--- a/Proposal/chapter5.tex
+++ b/Proposal/chapter5.tex
@@ -367,7 +367,7 @@ For `Storage \& Sharing', users can choose to turn storage off altogether, store
 
 In the subsequent sections we describe the results from our machine learning analysis and further explain how these results impact the designs presented in this section. For this purpose, Section~\ref{sec:design_ml} revisits the interface designs presented here.
 
-\section{Predicting users' behaviors}\label{sec:predict}
+\section{Predicting users' behaviors (original work)}\label{sec:predict}
 In this section we predict participants' \textit{enable}/\textit{disable} decision using machine learning methods. Similarly, we do not attempt to find the best possible solution; instead we make a conscious trade-off between parsimony and prediction accuracy. Accuracy is important to ensure that users' privacy preferences are accurately captured and/or need only few manual adjustments. Parsimony, on the other hand, prevents overfitting and promotes fairness: we noticed that more complex models tended to increase overall accuracy by predicting a few users' preferences more accurately, with no effect on other users. Parsimony also makes the associated default setting easier to understand for the user.
 
 %Our prediction target is the participants' decision to \textit{enable} or \textit{disable} the data collection described in each scenario. The scenario parameters serve as input attributes. These are nominal variables, making decision tree algorithms such as ID3 and J48 a suitable prediction approach. Unlike ID3, J48 uses gain ratio as the root node selection metric, which is not biased towards input attributes with many values. Moreover, by using J48 decision trees, the amount of pruning for the model can be easily manipulated to investigate the trade-off between the accuracy and parsimony. We therefore use J48 throughout our analysis.
@@ -794,7 +794,7 @@ There is another 5-profile fit-based solution with a slightly higher accuracy (8
 
 Other usable solutions are the 3-profile fit-based solution (Figure~\ref{fig:fit_3_profile001}) or the 4-profile fit-based solution (Figure~\ref{fig:fit_4_profile010}. However, like almost all of the less parsimonious solutions, these profiles involve higher-order interaction effects, e.g. between \textbf{Storage}, \textbf{Purpose}, and \textbf{Action}; and between \textbf{Storage}, \textbf{Purpose}, and \textbf{Who}. Consequently, a rather more complex interface is needed to accommodate these default profiles.
 
-\section{Privacy-Setting Prototype Design Using Machine Learning Results}\label{sec:design_ml}
+\section{Privacy-Setting Prototype Design Using Machine Learning Results (original work)}\label{sec:design_ml}
 In Section~\ref{sec:design_stat} we developed a prototype interface that household IoT users can use to manually set their privacy settings (see Figure~\ref{fig:interface2}). Our machine learning analysis (Section~\ref{sec:predict}) resulted in a number of interesting solutions for ``smart profiles'' that would allow users of this interface to set their privacy settings with a single click (i.e., a choice of profile). While some of these profiles can be integrated in our prototype (e.g., the most parsimonious 2-profile fit-based solution and the 4-profile and 5-profile agglomerative solutions) other profiles have an interaction effect between variables that are modeled as independent in our current prototype interface (e.g., the two 5-profile fit-based solutions presented in Figures~\ref{fig:fit_5_profile001} and~\ref{fig:fit_5_profile003}).
 
 In this section we therefore present two modified prototypes that are designed to be compatible with these two 5-profile solutions. These two solutions are not the most accurate, but they produce a parsimonious set of profiles that require only minimal alterations to our interface design. They thus provide the optimal trade-off between reduction accuracy, profile parsimony, and interface complexity.
