--- a/Proposal/proposedwork.tex
+++ b/Proposal/proposedwork.tex
@@ -1,7 +1,7 @@
 % !TeX root = proposal.tex
-\chapter{Proposed Work}
+\chapter{Proposed Work}\label{chapter:evaluation}
 
-To further explore this trade-off between parsimony and accuracy and to answer the second research question in Chapter~\ref{chapter:Motivation}, I propose the following user study plan focusing on evaluating the user experience of the privacy-setting interface prototypes.
+To further explore this trade-off between parsimony and accuracy and to answer the second research question in Chapter~\ref{chapter:intro}, I propose the following user study plan focusing on evaluating the user experience of the privacy-setting interface prototypes.
 
 \section{Planned Experimental Setup}
 Proposed user study will be a between-subject study. All the participants will be recruited through Amazon Mechanical Turk. During this user study, we will manipulate two different independent variables to compare several default/profile solutions. The first one is the extend of default/profile's conservatives. We consider the default settings that with all disabled by default as the most conservative profile; and the default settings with all enabled by default as the most open profile, the `smart default' and `smart profiles' are considered to be in the middle. The other independent variable is the different levels of complexity for the settings interface. Hence $4$x$2=8$ total experimental conditions (i.e., user interfaces) will be presented to the participants. The Dependent variable of our study will be the user experience of the system, including the satisfaction and trust to the company.
