--- a/Proposal/introduction.tex
+++ b/Proposal/introduction.tex
@@ -1,24 +1,33 @@
 % !TeX root = proposal.tex
-\chapter{Motivation}\label{chapter:Motivation}
+\chapter{Motivation}\label{chapter:intro}
  
-During the last two decades, computers have evolved into intricate personal tracking devices such as smart phones, smart watches, and fitness trackers. At the same time, computers and communication technologies are being embedded in appliances such as TVs, refrigerators, light fixtures and thermostats to create `smart home' environments. Finally, public sensing devices track us as we move about the built environment. By using all kinds of sensors, such as cameras, microphones, GPS, accelerometers, even the simplest of appliances are able to gain knowledge of it's surrounding and thier users. These connected devices, exchange data with each other, and further interact with our day-to-day activities. It's no longer surprising that our smart refrigerator knows what food is stored inside it and notify us that we need to buy groceries when we start our cars as we go back home from work. These smart connected devices are revolutionizing our everyday life.
+During the last two decades, computers have evolved into intricate personal tracking devices such as smart phones, smart watches, and fitness trackers. At the same time, computers and communication technologies are being embedded in appliances such as TVs, refrigerators, light fixtures and thermostats to create `smart home' environments. Finally, public sensing devices track us as we move about the built environment. By using all kinds of sensors, such as cameras, microphones, GPS, accelerometers, even the simplest of appliances are able to gain knowledge of its surrounding and their users. These connected devices, exchange data with each other, and further interact with our day-to-day activities. It is no longer surprising that our smart refrigerator knows what food is stored inside it and notify us that we need to buy groceries when we start our cars as we go back home from work. These smart connected devices are arguably revolutionizing our everyday life.
 
-%As forecast by Gartner~\cite{van_der_meulen_gartner_nodate}, the total number of 21 billion IoT devices will be in use by 2020. Cisco also predicts the global IoT market will be \$14.4 trillion by 2022. 
-The rapidly accelerating growth of these Internet of Things (IoT) technologies brings a wealth of opportunities as well as risks. Privacy issues are the underlying obstacles to the adoption of social and mobile technologies. Privacy concerns have been identified as an important barrier to the growth of IoT.
-% privacy paradox
-When the users are considering adopting the new IoT devices, they want to take the benefit of using those smart connected electronic devices by sharing and disclosing their certain personal information to get more personalized experience. However, such disclosured information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which will result in unknown risks to the users. Users have to make choices on what information that they want to disclose.
+As forecast by Gartner~\cite{van_der_meulen_gartner_nodate}, the total number of 21 billion IoT devices will be in use by 2020. Cisco also predicts the global IoT market will be \$14.4 trillion by 2022. This rapidly accelerating growth of these Internet of Things (IoT) technologies brings a wealth of opportunities as well as risks. 
 
-Most Internet users take a pragmatic stance on information disclosure. They implicitly use a method called \textit{privacy calculus} to process their information disclosure decisions. They compare the perceived risks and anticipated benefit, and make decisions based on this risk-benefit analysis.
+When users are considering adopting new IoT devices, they want to take the benefit of using those smart connected electronic devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which will result in unknown privacy risks to the users. A few research has shown that privacy issues are the underlying obstacles to the adoption of social and mobile technologies~\cite{}. Privacy concerns have been identified as an important barrier to the growth of IoT.
 
-However, as the increase of the diversity of IoT devices, it becomes more and more difficult to keep up with the many different ways in which data about ourselves is collected and disseminated. Although generally, users care about their privacy, few of them in practice find time to read the privacy policies or play around the privacy setting options that provided to them. There are several reasons leading to this problem: i) Users will think more of the benefit they will enjoy if they use the IoT devices or services than the potential risks if they disclose their information. ii) The privacy policies is too long, or the privacy setting of such devices are too complicated, making users irritated to finish reading/setting them. iii) As the rapid increment of numbers of IoT devices, the numbers and options of privacy setting for all the IoT devices are also increasing exponentially. This privacy-setting choice overload makes it difficult for IoT users to correctly and precisely make their decision to express their true demands. 
+Most Internet users take a pragmatic stance when they have to make choices on what information that they want to disclose. They implicitly use a method called \textit{privacy calculus} to process their information disclosure decisions. They compare the perceived risks and anticipated benefit, and make decisions based on this risk-benefit analysis.
 
-In addition, the user interface for setting privacy preference of present IoT device is imperfect even for a smartphone, not to mention the complexity of manually setting privacy preferences for numerous different other IoT devices. Hence, there is a urgent demand to solve the following research question: 
+However, as the diversity of IoT devices increases, it becomes more and more difficult to keep up with the many different ways in which data about ourselves is collected and disseminated. Although generally users care about their privacy, few of them in practice find time to read the privacy policies or the privacy-settings carefully that are provided to them. There are several reasons for this problem: i) Users will pay more attention to the benefit than potential risks from using IoT devices or services. ii) The privacy policies are too long, or the privacy setting of such devices are too complicated, making users irritated to finish reading/setting them. iii) As the number IoT devices rapidly increases, the numbers and options of privacy setting for all the IoT devices will also increase exponentially. This privacy-setting choice overload makes it difficult for IoT users to correctly and precisely make their decision to express their true demands. 
 
-\textbf{How can we help users simplify the task of controlling privacy setting for IoT devices in a user-friendly manner, so that they can make good privacy decisions?}
+In addition, the user interface for setting privacy preferences of present IoT devices is imperfect even for a smartphone, not to mention the complexity of manually setting privacy preferences for numerous different other IoT devices. Hence, there is an urgent demand to solve the following research question: 
 
-This question can be further divided into two sub-questions: 1). Can we recommend them the appropriate IoT privacy-setting according to their decision making characteristics? )2. How do they feel about the new privacy-setting recommendation interface that we made?
+\textbf{How can we help users simplify the task of controlling privacy setting for IoT devices in a user-friendly manner, so that they can make good privacy decisions?} This question can be further divided into two sub-questions: 1). Can we recommend them the appropriate IoT privacy-setting according to their decision making characteristics? )2. How do they feel about the new privacy-setting recommendation interface that we made?
 
-To solve the first research question, we developed a data-driven approach to \emph{recommending} privacy settings for users of various IoT environments. In this proposal, I first discuss our existing work on recommending privacy preferences for general IoT and household IoT environments. We have used both statistical analysis and machine learning techniques to analyze how IoT users make decision regarding the privacy settings of their devices. Based on the insights gained from this analysis, we designed an intelligent user interface to reduce the complexity of setting privacy for IoT. Subsequently I discuss my proposed study to evaluate the new interface of recommending privacy-settings for household IoT to answer the second research question, see Chapter 6.
+In this proposal, we try to solve the main research question:
+\begin{enumerate}
+	\item In Chapter~\ref{chapter:acceptability}, we present a preliminary survey study that we conducted by interviewing with potential IoT users. By doing this, we try to gain deeper insight on the acceptability of IoT systems, which will be helpful and supportive to our following investigation to the decision-making process of IoT users when they share their personal data with differernt general public IoT devices. This will further affect how we design the privacy-setting interface and recommend privacy-settings for the users.
+	
+	\item In Chapter~\ref{chapter:generalIoT}, we demonstrate our existing work on recomming privacy preferences for general IoT. For this study, we leveraged data collected by Lee and Kobsa~\cite{lee2016understanding}, which asked 200 participants about their intention to allow or reject the IoT features presented in 14 randomized generated general public IoT usage scenarios. The scenarios have 5 manipulable parameters: `Who', `What', `Where', `Reason', and `Persistence'. We first apply statistical analysis on the dataset to determine the effect of each scenario parameter on users' decisions to allow the general IoT scenarios. Based on this statistical analysis, we design an ``layered'' intelligent user interface to reduce the complexity of manually setting privacy preferences for IoT. To further simplify the task of manully setting privacy preferences, we next use machine learning techniques to predict users' decisions based on the scenario parameters. By using Weka Java library, I develop 5 differernt machine learnign algorithms to cluster the participants and create a number of ``smart profiles''  accordingly. Each ``smart profile'' is a group of pre-set privacy setting preferences that users can apply by a single click. We present the detailed explanation of all the ``smart profiles''  to the users so that they can easily choose the one that are most suitable for them.
+	
+	\item In Chapter~\ref{chapter:householdIoT}, we expand 
+	
+	\item In Chapter~\ref{chapter:evaluation} I discuss my proposed study to evaluate the new interface of recommending privacy-settings for household IoT.
+\end{enumerate}
+
+
+
 
 
 
