--- a/Proposal/motivation.tex
+++ b/Proposal/motivation.tex
@@ -1,12 +1,12 @@
 % !TeX root = proposal.tex
 
-\chapter{The Acceptability of IoT}\label{chapter:Acceptability}
+\chapter{The Acceptability of IoT (original work)}\label{chapter:acceptability}
 
-To better answer the first research question, we conducted  a preliminary user study based on interviews with potential IoT users to gain deeper insight on the acceptability of IoT systems and devices. I first discuss the experimental setup of our preliminary user study. Secondly, I demonstrate the analysis to the results of the study.
+In this chapter, we present a preliminary survey study based on interviews with potential IoT users to gain deeper insight on the acceptability of IoT systems. I first discuss the experimental setup of our preliminary user study. Secondly, I demonstrate the analysis on the results of the study.
 
 \section{Experimental Setup}
 
-For this experiment, we interviewed 10 users with the demographics shown in Table~\ref{tab:demographics1}. The interviews are approximately 30-50 minutes in length and covered a wide range of open questions related to IoT. These questions need participants to input their personal preferences about technology and self-perceived tech savviness. We first recorded the entire conversation with the participants on the understanding that their anonymity was kept. The entire recorded conversation was then transcribed manually. We also tried to take note of other interpersonal cues, e.g. body language, as well. Keywords, such as privacy and ease of use, have been focused on. During the analysis, we extracted the key statement from our interviews and used card sorting and affinity diagram techniques to group the specific statements.
+For this experiment, we interviewed 10 users with the demographics shown in Table~\ref{tab:demographics1}. The interview is approximately 30-50 minutes in length and covered a wide range of open questions related to IoT. These questions need participants to input their personal preferences about technology and self-perceived tech savviness. We first recorded the entire conversation with the participants on the understanding that their anonymity was kept. The entire recorded conversation was then transcribed manually. We also tried to take note of other interpersonal cues, such as body language Keywords. During the analysis, we extracted participants' key statements from our interviews and used card sorting and affinity diagram techniques to group the specific statements. We emphasize any related key word, such as ``privacy'' or ``ease of use''. 
 
 \begin {table}
 \caption {Participants Demographics} \label{tab:demographics1}
