--- a/Proposal/publication.tex
+++ b/Proposal/publication.tex
@@ -5,9 +5,11 @@
 	\item He, Y., Bahirat, P., Knijnenburg, B.P. (2018): A Data Driven approach to Designing for Privacy in Household IoT. Submitted to ACM Transactions on Interactive Intelligent Systems (TiiS).
 	\item Bahirat, P., He, Y., Knijnenburg, B.P. (2018): Exploring Defaults and Framing effects on Privacy Decision Making in Smarthomes.  To appear on Interactive Workshop on the Human aspect of Smarthome Security and Privacy, SOUPS 2018, Baltimore, U.S.A.
 	\item Bahirat, P., He, Y., Menon, A., Knijnenburg, B.P. (2018): A Data-Driven Approach to Developing IoT Privacy-Setting Interfaces. IUI2018, Tokyo, Japan.
-	\item Liu, J., Shen, H., Yu, L., Narman, H.S., Zhai, J., Hallstrom, J.O., He, Y. (2018): Characterizing Data Deliverability of Greedy Routing in Wireless Sensor Networks. IEEE Transactions on Mobile Computing (TMC) 17, 543-559.
-	\item Ge, R., Feng, X., He, Y., Zou, P. (2017): The Case for Cross-Component Power Coordination on Power Bounded Systems. ICPP2016, Philadelphia, PA, USA
-	\item Zhai, J., He, Y., Hallstrom, J.O. (2015): A Software Approach to Protecting Embedded System Memory from Single Event Upsets. EWSN2015, Porto, Portugal.
-	\item He, Y., Du, Y., Hughes, S., Zhai, J., Hallstrom, J.O., Sridhar, N. (2015): DESAL$^\beta$ : A Framework For Implementing Self-stabilizing Embedded Network Applications. International Internet of Things Summit, pp. 307-312. Springer, Cham, 2015.
-	\item Ruffing M., He Y., Kelly, M., Hallstrom, J.O., Olariu, S., Weigle, M.C. (2014): A Retasking Framework for Wireless Sensor Networks. Military Communications Conference (MILCOM), 2014 IEEE 1066-1071.
+%	
+%Following are other publications that I have during my Ph.D.
+%	\item Liu, J., Shen, H., Yu, L., Narman, H.S., Zhai, J., Hallstrom, J.O., He, Y. (2018): Characterizing Data Deliverability of Greedy Routing in Wireless Sensor Networks. IEEE Transactions on Mobile Computing (TMC) 17, 543-559.
+%	\item Ge, R., Feng, X., He, Y., Zou, P. (2017): The Case for Cross-Component Power Coordination on Power Bounded Systems. ICPP2016, Philadelphia, PA, USA
+%	\item Zhai, J., He, Y., Hallstrom, J.O. (2015): A Software Approach to Protecting Embedded System Memory from Single Event Upsets. EWSN2015, Porto, Portugal.
+%	\item He, Y., Du, Y., Hughes, S., Zhai, J., Hallstrom, J.O., Sridhar, N. (2015): DESAL$^\beta$ : A Framework For Implementing Self-stabilizing Embedded Network Applications. International Internet of Things Summit, pp. 307-312. Springer, Cham, 2015.
+%	\item Ruffing M., He Y., Kelly, M., Hallstrom, J.O., Olariu, S., Weigle, M.C. (2014): A Retasking Framework for Wireless Sensor Networks. Military Communications Conference (MILCOM), 2014 IEEE 1066-1071.
 \end{enumerate}
