cleaned up the structure
renamed different chapter tex files and cleaned up

--- a/Proposal/1introduction.tex
+++ b/Proposal/1introduction.tex
@@ -1,5 +1,5 @@
 % !TeX root = proposal.tex
-\chapter{Motivation}\label{chapter:intro}
+\chapter{Introduction}\label{chapter:intro}
  
 During the last two decades, computers have evolved into intricate personal tracking devices such as smart phones, smart watches, and fitness trackers. At the same time, computers and communication technologies are being embedded in appliances such as TVs, refrigerators, light fixtures and thermostats to create `smart home' environments. Finally, public sensing devices track us as we move about the built environment. By using all kinds of sensors, such as cameras, microphones, GPS, accelerometers, even the simplest of appliances are able to gain knowledge of its surrounding and their users. These connected devices, exchange data with each other, and further interact with our day-to-day activities. It is no longer surprising that our smart refrigerator knows what food is stored inside it and notify us that we need to buy groceries when we start our cars as we go back home from work. These smart connected devices are arguably revolutionizing our everyday life.
 
@@ -13,7 +13,7 @@ However, as the diversity of IoT devices increases, it becomes more and more dif
 
 In addition, the user interface for setting privacy preferences of present IoT devices is imperfect even for a smartphone, not to mention the complexity of manually setting privacy preferences for numerous different other IoT devices. Hence, there is an urgent demand to solve the following research question: 
 
-\textbf{How can we help users simplify the task of controlling privacy setting for IoT devices in a user-friendly manner, so that they can make good privacy decisions?} This question can be further divided into two sub-questions: 1). Can we recommend them the appropriate IoT privacy-setting according to their decision making characteristics? )2. How do they feel about the new privacy-setting recommendation interface that we made?
+\textbf{How can we help users simplify the task of controlling privacy setting for IoT devices in a user-friendly manner, so that they can make good privacy decisions?} This question can be further divided into two sub-questions: 1). Can we recommend them the appropriate IoT privacy-setting according to their decision making characteristics? 2). How do they feel about the new privacy-setting recommendation interface that we made?
 
 In this proposal, we try to solve the main research question:
 \begin{enumerate}
