--- a/Proposal/6evaluation.tex
+++ b/Proposal/6evaluation.tex
@@ -1,5 +1,5 @@
 % !TeX root = proposal.tex
-\chapter{Proposed Work}\label{chapter:evaluation}
+\chapter{Evaluate the Household IoT Privacy-setting Interface Prototype (Proposed original work)}\label{chapter:evaluation}
 
 To further explore this trade-off between parsimony and accuracy and to answer the second research question in Chapter~\ref{chapter:intro}, I propose the following user study plan focusing on evaluating the user experience of the privacy-setting interface prototypes.
 
