--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -100,14 +100,14 @@
 	
 	
 	\setcounter{page}{1}
-	\input{introduction.tex}
-	\input{motivation.tex}
-	\input{chapter4.tex}
-	\input{chapter5.tex}
-%	\input{chapter6.tex}
-	\input{proposedwork.tex}
-	\input{relatedWork.tex}
-	\input{conclusion.tex}
+	\input{1introduction.tex}
+	\input{2acceptability.tex}
+	\input{3generalIoT.tex}
+	\input{4householdIoT.tex}
+	\input{5fitnessIoT.tex}
+	\input{6evaluation.tex}
+	\input{7related_work.tex}
+	\input{8conclusion.tex}
 	
 	%
 	% The appendices are optional.  This is the format for two or more.
@@ -157,9 +157,9 @@
 	\addtotoc{Bibliography}{\bibliography{bibliography}}
 		\begin{appendices}
 		\begin{subappendices}
-			\inputfile{appendixA.tex}
-			\inputfile{appendixB.tex}
-			\inputfile{appendixC.tex}
+			\inputfile{appendix.tex}
+%			\inputfile{appendixB.tex}
+%			\inputfile{appendixC.tex}
 		\end{subappendices}
 	\end{appendices}
 \end{document}
