--- a/Proposal/5fitnessIoT.tex
+++ b/Proposal/5fitnessIoT.tex
@@ -1,3 +1,3 @@
 % !TeX root = proposal.tex
-\chapter{Recommending Privacy Perference for Fitness IoT}
+\chapter{Recommending Privacy Perference for Fitness IoT}\label{chapter:fitnessIoT}
 In this chapter, we present the work completed to date in the areas of designing for privacy for Fitness IoT.
