changes intro and acceptability

--- a/Proposal/1introduction.tex
+++ b/Proposal/1introduction.tex
@@ -1,11 +1,11 @@
 % !TeX root = proposal.tex
 \chapter{Introduction}\label{chapter:intro}
  
-During the last two decades, computers have evolved into intricate personal tracking devices such as smart phones, smart watches, and fitness trackers. At the same time, computers and communication technologies are being embedded in appliances such as TVs, refrigerators, light fixtures and thermostats to create `smart home' environments. Finally, public sensing devices track us as we move about the built environment. By using all kinds of sensors, such as cameras, microphones, GPS, accelerometers, even the simplest of appliances are able to gain knowledge of its surrounding and their users. These connected devices, exchange data with each other, and further interact with our day-to-day activities. It is no longer surprising that our smart refrigerator knows what food is stored inside it and notify us that we need to buy groceries when we start our cars as we go back home from work. These smart connected devices are arguably revolutionizing our everyday life.
+During the last two decades, computers have evolved into intricate personal tracking devices such as smart phones, smart watches, and fitness trackers. At the same time, computers and communication technologies are being embedded in appliances such as TVs, refrigerators, light fixtures and thermostats to create `smart home' environments. Finally, public sensing devices track us as we move about the built environment. By using all kinds of sensors, such as cameras, microphones, GPS, accelerometers, even the simplest of appliances are able to gain knowledge of its surrounding and their users. These connected devices exchange data with each other, and further interact with our day-to-day activities. It is no longer surprising that our smart refrigerator knows what food is stored inside it and notify us that we need to buy groceries when we start our cars as we go back home from work. These smart connected devices are arguably revolutionizing our everyday life.
 
 As forecast by Gartner~\cite{van_der_meulen_gartner_nodate}, the total number of 21 billion IoT devices will be in use by 2020. Cisco also predicts the global IoT market will be \$14.4 trillion by 2022. This rapidly accelerating growth of these Internet of Things (IoT) technologies brings a wealth of opportunities as well as risks. 
 
-When users are considering adopting new IoT devices, they want to take the benefit of using those smart connected electronic devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which will result in unknown privacy risks to the users. A few research has shown that privacy issues are the underlying obstacles to the adoption of social and mobile technologies~\cite{}. Privacy concerns have been identified as an important barrier to the growth of IoT.
+When users are considering adopting new IoT devices, they want to take the benefit of using those smart connected electronic devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which will result in unknown privacy risks to the users. \textcolor{red}{A few research has shown that privacy issues are the underlying obstacles to the adoption of social and mobile technologies~\cite{}}. Privacy concerns have been identified as an important barrier to the growth of IoT.
 
 Most Internet users take a pragmatic stance when they have to make choices on what information that they want to disclose. They implicitly use a method called \textit{privacy calculus} to process their information disclosure decisions. They compare the perceived risks and anticipated benefit, and make decisions based on this risk-benefit analysis.
 
@@ -13,19 +13,19 @@ However, as the diversity of IoT devices increases, it becomes more and more dif
 
 In addition, the user interface for setting privacy preferences of present IoT devices is imperfect even for a smartphone, not to mention the complexity of manually setting privacy preferences for numerous different other IoT devices. Hence, there is an urgent demand to solve the following research question: 
 
-\textbf{How can we help users simplify the task of controlling privacy setting for IoT devices in a user-friendly manner, so that they can make good privacy decisions?} This question can be further divided into two sub-questions: 1). Can we recommend them the appropriate IoT privacy-setting according to their decision making characteristics? 2). How do they feel about the new privacy-setting recommendation interface that we made?
+\textbf{RQ: How can we help users simplify the task of controlling privacy setting for IoT devices in a user-friendly manner, so that they can make good privacy decisions?} This research question can be further divided into two sub-questions: 1). Can we recommend them the appropriate IoT privacy-setting according to their decision making characteristics? 2). How do they feel about the new privacy-setting recommendation interface that we made?
 
 In this proposal, we try to solve the main research question:
-\begin{enumerate}
-	\item In Chapter~\ref{chapter:acceptability}, we present a preliminary survey study that we conducted by interviewing with potential IoT users. By doing this, we try to gain deeper insight on the acceptability of IoT systems, which will be helpful and supportive to our following investigation to the decision-making process of IoT users when they share their personal data with differernt general public IoT devices. This will further affect how we design the privacy-setting interface and recommend privacy-settings for the users.
-	
-	\item In Chapter~\ref{chapter:generalIoT}, we demonstrate our existing work on recomming privacy preferences for general IoT. For this study, we leveraged data collected by Lee and Kobsa~\cite{lee2016understanding}, which asked 200 participants about their intention to allow or reject the IoT features presented in 14 randomized generated general public IoT usage scenarios. The scenarios have 5 manipulable parameters: `Who', `What', `Where', `Reason', and `Persistence'. We first apply statistical analysis on the dataset to determine the effect of each scenario parameter on users' decisions to allow the general IoT scenarios. Based on this statistical analysis, we design an ``layered'' intelligent user interface to reduce the complexity of manually setting privacy preferences for IoT. To further simplify the task of manully setting privacy preferences, we next use machine learning techniques to predict users' decisions based on the scenario parameters. By using Weka Java library, I develop 5 differernt machine learnign algorithms to cluster the participants and create a number of ``smart profiles''  accordingly. Each ``smart profile'' is a group of pre-set privacy setting preferences that users can apply by a single click. We present the detailed explanation of all the ``smart profiles''  to the users so that they can easily choose the one that are most suitable for them.
-	
-	\item In Chapter~\ref{chapter:householdIoT}, we expand 
-	
-	\item In Chapter~\ref{chapter:evaluation} I discuss my proposed study to evaluate the new interface of recommending privacy-settings for household IoT.
-\end{enumerate}
 
+In Chapter~\ref{chapter:acceptability}, we first present a preliminary user study that we conduct by interviewing with potential IoT users. By doing this, we try to gain deeper understanding on the general IoT acceptability from users' perspective, i.e. \textbf{What are the factors that affect users' decision when they consider adopting a new IoT device}. The reason we conduct this preliminary user study is that IoT device users in real usage context would more likely pay higher attention to those factors that have already affected their decisions when they are considering adopting a IoT device, i.e. The factors that affect users' adopting phase would more likely to have effect on their real use phase too. Therefore, knowing what aspects of IoT are important to user when they are considering adopting IoT would be helpful and supportive to our following investigation on how general IoT users make decisions when they share their personal data in different IoT contexts and further affect how we design the user interface for setting privacy preferences and recommend privacy settings for different IoT contexts.
+	
+In Chapter~\ref{chapter:generalIoT}, we try to answer the first sub question by researching the decision-making characteristics of general IoT users. We demonstrate our existing work on recommending privacy settings for general IoT. For this study, we leveraged data collected by Lee and Kobsa~\cite{lee2016understanding}, which asked 200 participants about their intention to allow or reject the IoT features presented in 14 randomized generated general public IoT usage scenarios. The scenarios have 5 manipulable parameters: `Who', `What', `Where', `Reason', and `Persistence'. We first apply statistical analysis on the dataset to determine the effect of each scenario parameter on users' decisions to allow the general IoT scenarios. Based on this statistical analysis, we design an ``layered'' intelligent user interface to reduce the complexity of manually setting privacy preferences for IoT. To further simplify the task of manually setting privacy preferences, we next use machine learning techniques to predict users' decisions based on the scenario parameters. By using Weka Java library, I develop 5 different machine learning algorithms to cluster the participants and create a number of ``smart profiles''  accordingly. Each ``smart profile'' is a group of pre-set privacy setting preferences with detailed explanations. Users can simply choose the one they think the most fit and apply by a single click.
+	
+In Chapter~\ref{chapter:householdIoT}, we still try to answer the first sub question, but in household domain. 
+	
+In Chapter~\ref{chapter:fitnessIoT}, we move our discussion on the first sub question to the fitness IoT domain.
+	
+Our biggest limitation for the methods that we use in previous chapters is that we didn't test any of the presented interfaces, so we don't know what level of complexity (both in terms of the user interface and the in terms of the profiles). We next address this limitation in Chapter~\ref{chapter:evaluation}. In this chapter, I discuss my proposed study to evaluate the new interface of recommending privacy-settings for household IoT
 
 
 
