--- a/Proposal/2acceptability.tex
+++ b/Proposal/2acceptability.tex
@@ -4,17 +4,16 @@
 
 In this chapter, we present a preliminary survey study based on interviews with potential IoT users to gain deeper insight on the acceptability of IoT systems. I first discuss the experimental setup of our preliminary user study. Secondly, I demonstrate the analysis on the results of the study.
 
-\section{Experimental Setup}
+\section{Methods}
 
-For this experiment, we interviewed 10 users with the demographics shown in Table~\ref{tab:demographics1}. The interview is approximately 30-50 minutes in length and covered a wide range of open questions related to IoT. These questions need participants to input their personal preferences about technology and self-perceived tech savviness. We first recorded the entire conversation with the participants on the understanding that their anonymity was kept. The entire recorded conversation was then transcribed manually. We also tried to take note of other interpersonal cues, such as body language Keywords. During the analysis, we extracted participants' key statements from our interviews and used card sorting and affinity diagram techniques to group the specific statements. We emphasize any related key word, such as ``privacy'' or ``ease of use''. 
+For this experiment, we interviewed 10 users with the demographics shown in Table~\ref{tab:demographics1}. The interviews were approximately 30-50 minutes in length and covered a wide range of open questions related to IoT. These questions need participants to input their personal preferences about technology and self-perceived tech savviness. We first recorded the entire conversation with the participants on the understanding that their anonymity was kept. The entire recorded conversation was then transcribed manually. We then extracted keywords from participants' statements during the interview, such as ``privacy'' or ``ease of use''. These keywords were then grouped using card sorting and affinity diagram techniques. And finally we analyze the results.
 
 \begin {table}
 \caption {Participants Demographics} \label{tab:demographics1}
-\vspace{8pt}
 \begin{center}
-	\begin{tabular}{|c|c|c|}
+	\begin{tabular}{c|c|c}
 		\hline
-		Age Range & \multicolumn{2}{c|}{ 21-35 }\\
+		Age Range & \multicolumn{2}{c}{ 21-35 }\\
 		\hline
 		& Male & 8 \\
 		\cline{2-3}
@@ -34,7 +33,7 @@ For this experiment, we interviewed 10 users with the demographics shown in Tabl
 
 
 \section{Results Analysis}
-Based on the results from our interviews, the factors that affect the acceptability of IoT devices can be summarized into following three aspects: Privacy, Usability, and Affordability. As shown in Figure~\ref{fig:AcceptingProcess}, while making the decision of whether to adopt the IoT technology, the users usually consider the trade-off between privacy and usability as against affordability. If the user's find that they are going to get better usability and privacy at a price that they can afford, they are more likely to go ahead and choose an IoT system/device. Within the above three aspects, only the usability and privacy  are relevant to our research questions. Since we can not do anything to affordability in our study , however, the results still provide a good insight for manufacturers about the trade-off between usability, privacy , and affordability. Next, we present our analysis to the effect of usability and privacy to the acceptability of IoT systems/devices.
+Based on the results from our interviews, the factors that affect the acceptance of IoT devices can be summarized into following three aspects: Privacy, Usability, and Affordability. As shown in Figure~\ref{fig:AcceptingProcess}, while making the decision on whether to adopt the IoT technology, the users do a three-way calculus based on the trade-off between privacy, usability and affordability. Users are more likely to adopt an IoT device with high usability, privacy, and affordability. Within the above three aspects, only the usability and privacy  are relevant to our research questions. Although we can not do anything to affordability aspect in our study, the results still provide a good insight for manufacturers about the trade-off between usability, privacy, and affordability. Next, we present our analysis to the effect of usability and privacy to the acceptability of IoT systems/devices.
 
 \begin{figure}[htb]
 	\centering
@@ -44,10 +43,14 @@ Based on the results from our interviews, the factors that affect the acceptabil
 \end{figure}
 
 \subsection{IoT Privacy and Acceptability}
-In this section, we present the relation between privacy concerns and the acceptability of IoT systems/devices. The most important thing central to any IoT systems/devices is that there exists a constant sharing of information during the usage of such systems/devices. For example, in an environment of Household IoT, a refrigerator can sense what are stored inside it and can notify users when they need to refill the groceries. The entire IoT systems are highly relying on such data collections and sharing in order to provide the best possible experience to the users. However, users may find some of these data collections to be intrusive in nature. The perceived risks from the data collection and sharing can be the main obstacle that users would adopt IoT systems/devices. As one of the participants mentioned that, ``As long as the privacy issue can be managed and the companies can be responsible in keeping encrypted data so that it can't be easily hacked and all that. As long as everybody is respecting that privacy. I love it." Therefore, we consider privacy is one of the most important key factors which users would decide on, prior to accepting a new technology.
+In this section, we present the relation between privacy concerns and the acceptability of IoT systems. The most noticeable characteristic of a IoT system is that there exists a constant sharing of information during the usage of such systems. For example, in an environment of Household IoT, a refrigerator can sense what are stored inside it and can notify users when they need to refill the groceries. The entire IoT systems are highly relying on such data collections and sharing in order to provide the best possible experience for the users. However, users may find some of these data collections to be intrusive in nature. The perceived risks from the data collection and sharing can be the main obstacle that prevents users from adopting an IoT system. As one of the participants mentioned, 
+
+``As long as the privacy issue can be managed and the companies can be responsible in keeping encrypted data so that it can't be easily hacked and all that. As long as everybody is respecting that privacy. I love it." 
+
+Therefore, we consider privacy as one of the most important key factors affect users when they are making decision on whether to adopt an IoT system. Next, we present detailed analysis on IoT privacy.
 
 \subsubsection{Type of Information: \textit{What is collected/shared}}
-There are various types of information can be collected/shared in an IoT systems/devices, such as location, photos, voice, and videos. From our interview, we observe that different types of information have different levels of importance to the user. For example, a user may perceive different privacy-related concerns when his/her photos or videos are shared. Below is an excerpt from an interview which highlights the importance of what information is collected/shared:\\
+Various types of information can be collected/shared in an IoT system, such as location, photos, voice, and videos. From our interviews, we observe that participants show different levels of privacy concerns assuming a certain types of information about them is collected or shared. For example, some user will show high privacy concern if his/her photos or videos are shared, but not mind sharing his/her location. Below is an excerpt from an interview which highlights the importance of what information is collected/shared:\\
 
 \textit{I: ``So you are not ok with photo, video or voice?''\\}
 
@@ -57,7 +60,7 @@ There are various types of information can be collected/shared in an IoT systems
 
 \textit{P: ``I mean, I understand that it is being stored to improve your algorithms but what if that was to get leaked.''\\}
 
-typically, users are mostly uncomfortable with sharing their private data to other entities. ``May be sharing birthday or address, sharing those kind of data I'm not comfortable with". Another quote which proves the above point is "Maybe you can just share your common information, such as heartbeat data, sleeping data. But more critical, privacy data I don't want to share." They have their reservations against their private data being shared as it might threaten their security. Privacy information like date of birth and address helps in identifying the person and can be used to hack or rob the person. Therefore, we can say that people are worried about sharing their private information.
+Typically, users are mostly uncomfortable with sharing their data that can be used to easily identify their real world identity. ``May be sharing birthday or address, sharing those kind of data I'm not comfortable with". Another quote which proves the above point is "Maybe you can just share your common information, such as heartbeat data, sleeping data. But more critical, privacy data I don't want to share." They have their reservations against their private data being shared as it might threaten their security. Privacy information like date of birth and address helps in identifying the person and can be used to hack or rob the person. Therefore, we can say that people are worried about sharing their private information.
 
 However, some participants expressed that some of their private data can be shared unless it is sensitive. One participant mentioned, "At this point I am not much concerned about my location being shared. I mean if somebody wants to find me they can find me anyhow without my location being shared. I don't mind location, I don't like personal messages or personal pictures, personal communication being shared. That bothers me, example my email has some social security or something.".
 
