--- a/Proposal/4householdIoT.tex
+++ b/Proposal/4householdIoT.tex
@@ -1,5 +1,5 @@
 % !TeX root = proposal.tex
-\chapter{Recommending Privacy Perference for Household IoT}\label{chapter:householdIoT}
+\chapter{Recommending Privacy Settings for Household IoT}\label{chapter:householdIoT}
 
 In Chapter~\ref{chapter:generalIoT}, we have discussed recommending privacy preference for general IoT users. In this chapter, we present the work completed to date in the areas of designing for privacy for Household IoT. We expand and improve upon the previously-developed data-driven approach to design privacy-setting interfaces for users of household IoT devices. Moving the context to a more narrow environment shifts the focus of the privacy decision from the entity collecting information (which was the dominant parameter in our previous work) to a more contextual evaluation of the content or nature of the information ~\cite{nissenbaum_privacy_2004}.
 
