--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -9,7 +9,7 @@
 % The document guidelines say the font can be between 10pt and 12pt.
 % Specify whatever you want it to be here.
 %
-\documentclass[12pt]{ClemsonThesis}
+\documentclass[11pt]{ClemsonThesis}
 
 %
 % Use any additional packages you might need
@@ -32,7 +32,8 @@
 % Make the document your own -- fill in these values to reflect the type of
 % document you are writing.
 %
-\title{A Data-Driven Approach to Recommending Privacy Settings for IoT systems}
+\title{%A Data-Driven Approach to 
+	Recommending Privacy Settings for Internet-of-Things}
 \department{School of Computing}
 \documentType{Dissertation Proposal}
 \major{Computer Science}
