--- a/Proposal/publication.tex
+++ b/Proposal/publication.tex
@@ -1,8 +1,11 @@
 % !TeX root = proposal.tex
-\chapter*{Author's Publications}
-\noindent The work in this document is partially based on the following publications.
+\chapter{Author's Publications on this topic}
+\noindent The work in this document is partially based on the following related publications.
 \begin{enumerate}
-	\item He, Y., Bahirat, P., Knijnenburg, B.P. (2018): A Data Driven approach to Designing for Privacy in Household IoT. Submitted to ACM Transactions on Interactive Intelligent Systems (TiiS).
+	\item He, Y. (2019): Recommending Privacy Settings for IoT. In 24th International Conference on Intelligent User Interfaces (IUI ’19 Companion), March 17–20, 2019, Marina del Ray, CA.
+	
+	\item He, Y., Bahirat, P., Knijnenburg, B.P. (2018): A Data Driven approach to Designing for Privacy in Household IoT. ACM Transactions on Interactive Intelligent Systems (TiiS).
+	
 	\item Bahirat, P., He, Y., Knijnenburg, B.P. (2018): Exploring Defaults and Framing effects on Privacy Decision Making in Smarthomes.  To appear on Interactive Workshop on the Human aspect of Smarthome Security and Privacy, SOUPS 2018, Baltimore, U.S.A.
 	\item Bahirat, P., He, Y., Menon, A., Knijnenburg, B.P. (2018): A Data-Driven Approach to Developing IoT Privacy-Setting Interfaces. IUI2018, Tokyo, Japan.
 %	
